# src_platform_vsctl

./: AUTHORS  CHANGELOG  Makefile.in  README.md  configure  configure.ac
debian/: changelog  control  copyright  init.d  rules  vsctl.default
man/: Makefile.in  nsmount.pod  vsattr.pod  vsctl.pod  vspace.pod
scripts/: Makefile.in  vs_change_netaddr  vs_ns_setup
src/: Makefile.in  capflags.c  common.c  common.h  conf.c  conf.h  lists.h  mount_parse.h  mounts.c  nsmount.c  parse.c  parse.h  parse_stub.c  socket.c  vsaddr.c  vsattr.c  vsctl.c  vsctl.h  vspace.c  vswatch.c
